# evalforge

./: .env.example  .gitignore  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml  report_cli-b91a9e60.json  report_cli-f9b880c8.json  run_eval.py
.github/workflows/: ci.yml  self-eval.yml
agents/: execution_agent.py  hitl_node.py  judge_agent.py  memory_agent.py  orchestrator.py  report_agent.py  testgen_agent.py
api/: auth.py  main.py
api/routers/: jobs.py  targets.py  websocket.py
api/schemas/: job.py  report.py  target.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 09cc961951f3_initial_schema.py
evaluation/: llm_judge.py  lora_judge.py  ragas_scorer.py  scorer_router.py
memory/: regression_detector.py  store.py  trend_analyzer.py
models/training/: dataset.py  evaluate.py  train.py
tests/fixtures/: mock_target_server.py
tests/integration/: test_full_eval_pipeline.py
tests/unit/: test_judge_agent.py  test_testgen_agent.py
worker/: tasks.py  worker.py
